Fix: Implement KMS key import handling for infrastructure deployment
- Fixed EKS cluster deployment by adding proper locals block in eks/main.tf
- Rewrote eks/kms.tf to handle existing KMS keys with data sources and conditional creation
- Added KMS import logic to infrastructure-deploy.yml workflow that checks for existing KMS alias
- Configured EKS module to use conditional KMS encryption key
- Added region variable to EKS module and updated main.tf to pass it
- Added KMS key output to EKS module for reference

This resolves the KMS alias already exists error and allows deployment to work with
existing KMS keys (which have 7-day deletion waiting periods) by importing them
into Terraform state when found, or creating new ones when needed.

--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -92,6 +92,38 @@ jobs:
       - name: Terraform Init
         run: terraform init -input=false
 
+      - name: Check and Import Existing KMS Resources
+        continue-on-error: true
+        run: |
+          echo "🔐 Checking for existing KMS resources..."
+          
+          KMS_ALIAS="alias/eks/mlflow-cluster-${{ env.ENVIRONMENT }}"
+          
+          # Check if KMS alias exists
+          if aws kms describe-key --key-id "$KMS_ALIAS" 2>/dev/null; then
+            echo "Found existing KMS alias: $KMS_ALIAS"
+            
+            # Get the key ID from the alias
+            KEY_ID=$(aws kms describe-key --key-id "$KMS_ALIAS" --query 'KeyMetadata.KeyId' --output text)
+            echo "Key ID: $KEY_ID"
+            
+            # Try to import the KMS key into Terraform state
+            echo "Attempting to import KMS key into Terraform state..."
+            if ! terraform state show module.eks.aws_kms_key.this[0] 2>/dev/null; then
+              terraform import "module.eks.aws_kms_key.this[0]" "$KEY_ID" || echo "Key might already be in state or doesn't need import"
+            fi
+            
+            # Try to import the KMS alias into Terraform state  
+            echo "Attempting to import KMS alias into Terraform state..."
+            if ! terraform state show module.eks.aws_kms_alias.this[0] 2>/dev/null; then
+              terraform import "module.eks.aws_kms_alias.this[0]" "$KMS_ALIAS" || echo "Alias might already be in state or doesn't need import"
+            fi
+            
+            echo "✅ KMS import completed"
+          else
+            echo "No existing KMS alias found. Will create new KMS resources."
+          fi
+
       - name: Terraform Plan
         id: plan
         continue-on-error: true
