--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,28 @@ ydata-profiling = "4.3.1"
 s3fs = "^2025.5.1"
 pyarrow = "^15.0.2"
 matplotlib = "3.6.3"
+
+[tool.poetry.group.clustering.dependencies]
+# Core clustering algorithms
+hdbscan = "^0.8.33"
+scikit-learn = "^1.3.0"
+umap-learn = "^0.5.4"
+
+# Data processing and analysis
+numpy = "^1.23.5"
+pandas = "^1.5.3"
+polars = "^1.30.0"
+scipy = "^1.10.0"
+
+# Visualization
+matplotlib = "^3.6.3"
+seaborn = "^0.12.0"
+
+# MLflow for experiment tracking
+mlflow = "^2.8.0"
+
+# AWS integration
+boto3 = "^1.34.0"
+
+# Utilities
+tqdm = "^4.65.0"
