--- a/docker-compose.local-mlflow.yml
+++ b/docker-compose.local-mlflow.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mlflow-local:
     image: python:3.9-slim
@@ -34,7 +32,7 @@ services:
           --gunicorn-opts '--timeout=120 --workers=2'
       "
     healthcheck:
-      test: ["CMD", "bash", "-c", "curl -f http://localhost:5000/api/2.0/mlflow/experiments/search >/dev/null 2>&1"]
+      test: ["CMD", "bash", "-c", "curl -f http://localhost:5000/version >/dev/null 2>&1"]
       interval: 30s
       timeout: 15s
       retries: 8
