--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ydata-profiling = "4.3.1"
 s3fs = "^2025.5.1"
 pyarrow = "^15.0.2"
 matplotlib = "3.6.3"
+nltk = "3.9.1"
 
 [tool.poetry.group.clustering.dependencies]
 # Core clustering algorithms
