--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ umap-learn = "^0.5.4"
 [tool.poetry.group.deck_scoring.dependencies]
 xgboost = "^2.1.4"
 optuna = "^4.4.0"
+torch = "^2.7.1"
 
 # Data processing and analysis
 numpy = "^1.23.5"
