--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,13 @@ umap-learn = "^0.5.4"
 xgboost = "^2.1.4"
 optuna = "^4.4.0"
 torch = "^2.7.1"
+scikit-learn = "^1.3.0"
+
+[tool.poetry.group.duel_simulation.dependencies]
+requests = "^2.32.3"
+beautifulsoup4 = "^4.13.4"
+tqdm = "^4.67.1"
+polars = "^1.30.0"
 
 # Data processing and analysis
 numpy = "^1.23.5"
